Fix: 모달 외부 클릭 시 닫히게(차례대로 닫히는 건 아직 미구현), GroupSelect에 overflow: scroll 추가

--- a/styles/calendar/modal/CalendarModalProvider.module.scss
+++ b/styles/calendar/modal/CalendarModalProvider.module.scss
@@ -11,6 +11,12 @@
   align-items: center;
 }
 
+.modal {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 // @media (max-width: 768px) {
 //   .backdrop {
 //     display: block;
