--- a/styles/calendar/modal/GroupSelect.module.scss
+++ b/styles/calendar/modal/GroupSelect.module.scss
@@ -2,7 +2,9 @@
   position: absolute;
   z-index: 10;
   width: 200px;
+  height: 400px;
   padding: 22px 32px;
+  overflow: scroll;
   background-color: #f3f3ff;
   border: 1px solid #c1c8f0;
   border-radius: 10px;
